--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,43 @@ h6 {
 	color:white;
 	text-align: center;	
 }
+
+.nav {
+	padding-right: 30px;
+	padding-left: 30px;
+}
+
+.slider{
+	width:auto;
+	height:400px;
+	background-color: yellow;
+	border:2px solid black;
+}
+
+.search{
+	width:auto;
+	height: 400px;
+	background-color: blue;
+	border:2px solid black;
+}
+
+.product1{
+	width: auto;
+	height: 400px;
+	background-color: red;
+	border:1px solid black;
+}
+
+.product2{
+	width: auto;
+	height: 400px;
+	background-color: green;
+	border:1px solid black;
+}
+
+.product3{
+	width: auto;
+	height: 400px;
+	background-color: brown;
+	border:1px solid black;
+}
